--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,8 @@
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyCw29dHx1qpIClZXQ8UA2feMWWdC9Ucnak" />
+        <activity
+            android:name=".MapActivity" />
     </application>
 
 </manifest>
